2011-01-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingDMCS.h: include MessageQueue.h

	* include/network/ThreadFactory.h: Segfault fixed.
	* src/network/ThreadFactory.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.

	* src/network/Makefile.am: Add relative path to allow compiling
	from build directory.
	* src/dmcs/Makefile.am: Likewise.
	* src/Makefile.am: Likewise.

	* src/dmcsc.cpp: Allow streaming mode (by default).
	* include/dmcs/ProgramOptions.h: Likewise.

	* include/dmcs/StreamingForwardMessage.h: Add conflict to
	streaming message, remove restart flag.
	* src/network/ThreadFactory.cpp: Likewise.

2011-01-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testVariable.cpp: Refactoring.
	* testsuite/testTranslation.cpp: Likewise.
	* testsuite/testSignature.cpp: Likewise.
	* testsuite/testResult.cpp: Likewise.
	* testsuite/testQueryPlan.cpp: Likewise.
	* testsuite/testParsers.cpp: Likewise.
	* testsuite/testGraphProp.cpp: Likewise.
	* testsuite/testCombination.cpp: Likewise.
	* testsuite/testClaspResultOnlineParser.cpp: Likewise.
	* testsuite/testClasp.cpp: Likewise.
	* testsuite/testBlockingClasp.cpp: Likewise.
	* testsuite/testBeliefComparison.cpp: Likewise.
	* src/loopformula/DimacsVisitor.cpp: Likewise.
	* src/generator/staticGen.cpp: Likewise.
	* src/generator/LogicVisitor.cpp: Likewise.
	* src/generator/ContextGenerator.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/dmcs/QueryPlan.cpp: Likewise.
	* src/dmcs/ProcessBuf.cpp: Likewise.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/ClaspProcess.cpp: Likewise.
	* src/dmcs/Cache.cpp: Likewise.
	* src/dmcs/BeliefCombination.cpp: Likewise.
	* src/dmcs/BaseDMCS.cpp: Likewise.
	* include/solver/BaseSolver.h: Likewise.
	* include/process/ClaspProcess.h: Likewise.
	* include/parser/LocalKBBuilder.tcc: Likewise.
	* include/parser/LocalKBBuilder.h: Likewise.